env.example updated

--- a/zb/.env.example
+++ b/zb/.env.example
@@ -6,3 +6,5 @@ GOOGLE_CLIENT_ID=919945343056-8wehwcbe0231sdjgqgaervae3533hsdf.apps.googleuserco
 GOOGLE_CLIENT_SECRET=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jze
 SESSION_SECRET=NJSNKDJS_SDNS_NJ
 NODE_ENV=DEVELOPMENT
+RAZORPAY_KEY_ID=rzp_test_u1rNVF75sdkjfj
+RAZORPAY_KEY_SECRET=RLEUmD0WBC7HSD6wjH2zAv4
