--- a/fe/package.json
+++ b/fe/package.json
@@ -16,6 +16,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.13.1",
     "gsap": "^3.12.5",
+    "js-cookie": "^3.0.5",
     "locomotive-scroll": "^5.0.0-beta.21",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.6",
